fixing color contrast at footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -77,10 +77,6 @@ footer{
     padding: 30px;
 }
 
-footer #lastModified{
-    color: #FFBF46;
-}
-
 @media screen and (max-width:900px){
     nav{
         flex-direction: column;
